--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,34 +1,74 @@
-html,
+html {
+  overflow-y: scroll;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(92, 100, 181);
+}
+*:visited {
+  color: rgb(92, 100, 181);
+}
+
 .body {
-  /* padding: 0; */
-  /* margin: 0; */
+  /* padding: 0;
+  margin: 0; */
   font-size: 18px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
+  align-items: center;
   /* width: 100%; */
-  background-color: whitesmoke;
+  /* background-color: grey; */
 }
 .navbar {
   display: flex;
-  justify-content: center;
-  /* width: 50%; */
-  background-color: aqua;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 90%;
+  height: 10%;
+  /* background-color: red; */
 }
 
 .navbar-list {
   /* width: 70%; */
-  justify-content: center;
+  /* justify-content: center; */
   /* font-size: large; */
-  background-color: burlywood;
+  /* background-color: burlywood; */
+  display: flex;
+  list-style-type: none;
   padding: 15px;
-  margin: 20px;
+  /* margin: 20px; */
 }
 
 .navbar-item {
-  background-color: cadetblue;
-  display: inline;
-  /* justify-content: center; */
-  padding: 10px;
-  color: black;
+  /* background-color: cadetblue; */
+  text-decoration: none;
+  text-emphasis-color: white;
+  justify-content: center;
+  margin: 15px;
+}
+
+.social-links {
+  position: absolute;
+  right: 10%;
+  margin-top: 5%;
+  width: 7%;
+  /* padding: 10px; */
+  display: flex;
+  justify-content: space-between;
+  /* background-color: violet; */
+}
+
+.info-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  /* background-color: brown; */
+}
+.save-resume {
+  position: fixed;
+  margin-top: 5%;
+  right: 9%;
+  text-decoration: none;
 }
