--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 42px;
+  font-size: xxx-large;
   /* margin-bottom: 10%; */
   /* color: ; */
   /* background-color: red; */
@@ -36,7 +36,7 @@ html {
 .body {
   /* padding: 0;
   margin: 0; */
-  font-size: 18px;
+  font-size: medium;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -50,16 +50,19 @@ html {
   align-items: center;
   position: fixed;
   top: 0;
-  right: 5%;
-  width: 85%;
+
+  width: 100%;
   height: 10%;
   /* background-color: red; */
 }
 
 .navbar-list {
   display: flex;
-  align-items: flex-end;
-  /* width: 70%; */
+  margin-right: 5%;
+  /* justify-items: flex-end; */
+  justify-content: space-between;
+  /* align-items: space-between; */
+  width: 7%;
   /* justify-content: center; */
   /* font-size: large; */
   /* background-color: burlywood; */
@@ -70,11 +73,14 @@ html {
 }
 
 .navbar-item {
+  display: flex;
+  /* align-content: space-between; */
+  /* justify-content: space-between; */
   /* background-color: cadetblue; */
   text-decoration: none;
   text-emphasis-color: white;
   /* justify-content: center; */
-  margin-left: 30px;
+  /* margin-left: 30px; */
 }
 
 .social-links {
@@ -92,8 +98,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  /* background-color: brown; */
+  padding-top: 15px;
 }
 .save-resume {
   position: fixed;
@@ -101,17 +106,29 @@ html {
   right: 5%;
   text-decoration: none;
 }
-
+.bio {
+  width: 40%;
+  text-align: center;
+  font-size: large;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: space-around; */
+  /* background-color: hotpink; */
+}
 .project {
   background-color: white;
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 65%;
   /* align-items: flex-start; */
   padding: 10px;
+  margin: 10px;
   border: 2px solid rgb(92, 100, 181);
+  /* background-color: hotpink; */
   /* border-width: 20px; */
 }
-
 .project-desc {
   margin: 15px;
   /* width: 40%; */
@@ -120,4 +137,13 @@ html {
   flex-direction: column;
   justify-content: flex-start; */
   /* background-color: brown; */
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(192,192,192);
+  margin-top: 5px;
+  width: 100%;
+  height: 30vh;
 }
