--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,29 @@ html {
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(92, 100, 181);
-  /* animation: fadeIn 3s; */
-  /* background-color: black; */
+}
+img {
+  max-width: 100%;
+}
+h2 {
+  margin: 0;
 }
 *:visited {
   color: rgb(92, 100, 181);
 }
+@media (max-width: 750px), (max-height: 700px) {
+  img {
+    display: none;
+  }
+}
 .home {
   width: 100%;
-  /* top: 0; */
-  /* margin-top: 40vh; */
   height: 98vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: xxx-large;
-  /* margin-bottom: 10%; */
-  /* color: ; */
-  /* background-color: red; */
-  /* z-index: 1; */
 }
 .scroll-button {
   background-color: rgb(92, 100, 181);
@@ -31,18 +34,12 @@ html {
   padding: 10px;
   border: none;
   outline: none;
-  /* background-color: violet; */
 }
 .body {
-  /* padding: 0;
-  margin: 0; */
   font-size: medium;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  /* width: 100%; */
-  /* background-color: grey; */
 }
 .navbar {
   display: flex;
@@ -50,50 +47,29 @@ html {
   align-items: center;
   position: fixed;
   top: 0;
-
   width: 100%;
   height: 10%;
-  /* background-color: red; */
 }
-
 .navbar-list {
   display: flex;
-  margin-right: 5%;
-  /* justify-items: flex-end; */
+  margin-right: 100px;
   justify-content: space-between;
-  /* align-items: space-between; */
-  width: 7%;
-  /* justify-content: center; */
-  /* font-size: large; */
-  /* background-color: burlywood; */
+  width: 125px;
   list-style-type: none;
-  /* right: ; */
-  /* padding: 15px; */
-  /* margin: 20px; */
 }
-
 .navbar-item {
   display: flex;
-  /* align-content: space-between; */
-  /* justify-content: space-between; */
-  /* background-color: cadetblue; */
   text-decoration: none;
   text-emphasis-color: white;
-  /* justify-content: center; */
-  /* margin-left: 30px; */
 }
-
 .social-links {
   position: fixed;
-  right: 5%;
-  margin-top: 5%;
-  width: 7%;
-  /* padding: 10px; */
+  right: 100px;
+  margin-top: 75px;
+  width: 125px;
   display: flex;
   justify-content: space-between;
-  /* background-color: violet; */
 }
-
 .info-body {
   display: flex;
   flex-direction: column;
@@ -103,40 +79,28 @@ html {
 .save-resume {
   position: fixed;
   margin-top: 5%;
-  right: 5%;
+  right: 100px;
   text-decoration: none;
 }
 .bio {
-  width: 40%;
-  text-align: center;
+  width: 30%;
   font-size: large;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: space-around; */
-  /* background-color: hotpink; */
 }
 .project {
   background-color: white;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 65%;
-  /* align-items: flex-start; */
+  width: 50%;
   padding: 10px;
   margin: 10px;
   border: 2px solid rgb(92, 100, 181);
-  /* background-color: hotpink; */
-  /* border-width: 20px; */
+}
+.project-img {
+  margin: 15px;
 }
 .project-desc {
   margin: 15px;
-  /* width: 40%; */
-  /* height: 100vh; */
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-start; */
-  /* background-color: brown; */
+  width: 50%;
 }
 .footer {
   display: flex;
