--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,10 +12,9 @@ h2 {
 *:visited {
   color: rgb(92, 100, 181);
 }
-@media (max-width: 750px), (max-height: 700px) {
-  img {
-    display: none;
-  }
+.loading {
+  background-color: black;
+
 }
 .home {
   width: 100%;
@@ -76,12 +75,6 @@ h2 {
   align-items: center;
   padding-top: 15px;
 }
-.save-resume {
-  position: fixed;
-  margin-top: 5%;
-  right: 100px;
-  text-decoration: none;
-}
 .bio {
   width: 30%;
   font-size: large;
@@ -110,4 +103,33 @@ h2 {
   margin-top: 5px;
   width: 100%;
   height: 30vh;
+}
+@media screen and (max-width: 975px) {
+  .project-img {
+    display: none;
+  }
+  .navbar {
+    position: relative;
+  }
+  .navbar-list {
+    margin-right: 25px;
+  }
+  .social-links {
+    position: absolute;
+    right: 25px;
+  }
+  .bio {
+    width: 90%;
+    font-size: large;
+  }
+  .project {
+    width: 90%;
+  }
+  .project-desc {
+    margin: 15px;
+    width: 85%;
+  }
+  .footer {
+   font-size: small;
+  }
 }
