--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,9 +12,51 @@ h2 {
 *:visited {
   color: rgb(92, 100, 181);
 }
-.loading {
-  background-color: black;
+.spinner {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(92, 100, 181);
 
+  margin: 100px auto;
+  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+  animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+body {
+  animation: fadeInAnimation ease 2.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+   }
+}
+@-webkit-keyframes sk-rotateplane {
+  0% { -webkit-transform: perspective(120px) }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+@keyframes sk-rotateplane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+  } 50% {
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+  } 100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}
+.loading {
+  display: flex;
+  height: 98vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 .home {
   width: 100%;
@@ -131,5 +173,6 @@ h2 {
   }
   .footer {
    font-size: small;
+   text-align: center;
   }
 }
