--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,14 @@ html {
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(92, 100, 181);
+  background-color: rgb(238, 238, 247)
 }
 img {
   max-width: 100%;
+  cursor: pointer;
+}
+button {
+  cursor: pointer;
 }
 h2 {
   margin: 0;
@@ -12,6 +17,7 @@ h2 {
 *:visited {
   color: rgb(92, 100, 181);
 }
+
 .spinner {
   width: 40px;
   height: 40px;
@@ -111,24 +117,37 @@ body {
   display: flex;
   justify-content: space-between;
 }
-.info-body {
+.bio {
+  width: 100%;
+  height: 97vh;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 15px;
 }
-.bio {
+.bio-desc {
+  margin-top: 10vh;
   width: 30%;
-  font-size: large;
+}
+.bio-name {
+  font-size: 42px;
+}
+.applications {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 15px;
 }
 .project {
-  background-color: white;
   display: flex;
   justify-content: center;
+  position: relative;
   width: 50%;
   padding: 10px;
   margin: 10px;
   border: 2px solid rgb(92, 100, 181);
+  /* background-color: blueviolet; */
 }
 .project-img {
   margin: 15px;
@@ -137,11 +156,22 @@ body {
   margin: 15px;
   width: 50%;
 }
+.project-links {
+  /* background-color: aqua; */
+  display: flex;
+  flex-direction: column;
+  height: 70px;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: absolute;
+  right: 10px;
+}
 .footer {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  background-color: rgb(192,192,192);
+  background-color: rgb(207,207,232);
   margin-top: 5px;
   width: 100%;
   height: 30vh;
@@ -150,6 +180,9 @@ body {
   .project-img {
     display: none;
   }
+  .eye {
+  display: none;
+}
   .navbar {
     position: relative;
   }
@@ -161,8 +194,12 @@ body {
     right: 25px;
   }
   .bio {
-    width: 90%;
+    width: 100%;
     font-size: large;
+  }
+  .bio-desc {
+    margin-top: 15vh;
+    width: 90%;
   }
   .project {
     width: 90%;
