--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,6 +94,7 @@ h2 {
   top: 0;
   width: 100%;
   height: 10%;
+  z-index: 1;
 }
 .navbar-list {
   display: flex;
@@ -135,6 +136,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   padding-top: 15px;
 }
 .project {
@@ -191,14 +193,11 @@ h2 {
   }
   .bio {
     width: 100%;
-    height: 100vh;
+    height: 110vh;
   }
   .bio-desc {
     margin-top: 0vh;
     width: 90%;
-  }
-  .applications {
-    padding-top: 50px;
   }
   .project {
     width: 90%;
