--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,18 +14,13 @@ button {
 h2 {
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
 *:visited {
   color: rgb(92, 100, 181);
 }
-.spinner {
-  width: 40px;
-  height: 40px;
-  background-color: rgb(92, 100, 181);
-  margin: 100px auto;
-  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-  animation: sk-rotateplane 1.2s infinite ease-in-out;
-}
-.loaded {
+.body {
   animation: fadeInAnimation ease 2.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -37,23 +32,6 @@ h2 {
   100% {
       opacity: 1;
    }
-}
-@-webkit-keyframes sk-rotateplane {
-  0% { -webkit-transform: perspective(120px) }
-  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
-}
-@keyframes sk-rotateplane {
-  0% {
-    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
-  } 50% {
-    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
-  } 100% {
-    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-  }
 }
 .loading {
   display: flex;
@@ -136,7 +114,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  font-size: 20px;
   padding-top: 15px;
 }
 .project {
