--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@ h2 {
 h1 {
   text-align: center;
 }
+
 *:visited {
   color: rgb(92, 100, 181);
 }
@@ -141,6 +142,11 @@ h1 {
   align-items: flex-end;
   position: absolute;
   right: 10px;
+}
+.project-links svg{
+  width: 25px;
+  height: 30px;
+  cursor: pointer;
 }
 .footer {
   display: flex;
