--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
 html {
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(108, 106, 187);
-  background-color: whitesmoke;
+  color: #006816;
+  background-color: rgb(255, 255, 255);
 }
 img {
   max-width: 100%;
@@ -18,7 +18,7 @@ h1 {
   text-align: center;
 }
 *:visited {
-  color: rgb(108, 106, 187);
+  color: #006816;
 }
 .body {
   animation: fadeInAnimation ease 2.5s;
@@ -50,7 +50,7 @@ h1 {
   font-size: xxx-large;
 }
 .scroll-button {
-  background-color: rgb(108, 106, 187);
+  background-color:#006816;
   color: white;
   border-radius: 30px;
   margin: 40px;
@@ -126,7 +126,7 @@ h1 {
   width: 50%;
   padding: 10px;
   margin: 10px;
-  border: 2px solid rgb(108, 106, 187);
+  border: 2px solid #006816;
 }
 .project-img {
   margin: 15px;
@@ -154,7 +154,7 @@ h1 {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgb(207, 207, 207);
+  background-color: #dbdbdb;
   margin-top: 5px;
   width: 100%;
   height: 30vh;
