--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,7 +154,7 @@ h1 {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #dbdbdb;
+  background-color: rgb(236, 236, 236);
   margin-top: 5px;
   width: 100%;
   height: 30vh;
