--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
 html {
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(92,94,181);
-  background-color: rgb(206, 206, 228);
+  color: #07575B;
+  background-color: #C4DFE6;
 }
 img {
   max-width: 100%;
@@ -18,7 +18,7 @@ h1 {
   text-align: center;
 }
 *:visited {
-  color: rgb(92,94,181);
+  color: #07575B;
 }
 .body {
   animation: fadeInAnimation ease 2.5s;
@@ -50,7 +50,7 @@ h1 {
   font-size: xxx-large;
 }
 .scroll-button {
-  background-color:rgb(92,94,181);;
+  background-color:#07575B;
   color: white;
   border-radius: 30px;
   margin: 40px;
@@ -126,7 +126,7 @@ h1 {
   width: 50%;
   padding: 10px;
   margin: 10px;
-  border: 2px solid rgb(92,94,181);;
+  border: 2px solid #07575B;
 }
 .project-img {
   margin: 15px;
