--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
 html {
   overflow-y: scroll;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #07575B;
-  background-color: #C4DFE6;
+  font-family: Verdana, Helvetica, sans-serif;
+  color: rgb(137,56,49);
+  background-color: rgb(25, 27, 38);
 }
 img {
   max-width: 100%;
@@ -18,7 +18,7 @@ h1 {
   text-align: center;
 }
 *:visited {
-  color: #07575B;
+  color: rgb(137,56,49);
 }
 .body {
   animation: fadeInAnimation ease 2.5s;
@@ -40,6 +40,10 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+.loading svg {
+  /* width: 40px;
+  height: 40px; */
+}
 .home {
   width: 100%;
   height: 98vh;
@@ -47,10 +51,10 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: xxx-large;
+  font-size: 24px;
 }
 .scroll-button {
-  background-color:#07575B;
+  background-color:rgb(137,56,49);;
   color: white;
   border-radius: 30px;
   margin: 40px;
@@ -59,35 +63,51 @@ h1 {
   outline: none;
 }
 .body {
-  font-size: medium;
+  font-size: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .navbar {
+  z-index: 2;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: space-around;
+  /* align-items: flex-end;
+  align-content: center; */
+  flex-direction: column;
+  align-items: flex-end;
   position: fixed;
-  right: 100px;
-  margin-top: 25px;
-  width: 125px;
+  top: 0;
+  height: 90px;
+  /* right: 100px; */
+  /* margin-top: 25px; */
+  width: 100%;
+  /* background-color: rgb(36, 38, 48); */
 }
 .navbar-list {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  /* width: 100%; */
   list-style-type: none;
-  padding-left: 0;
+  /* padding-left: 0; */
+  width: 250px;
+  /* right: 400px; */
+  margin: 0;
+  margin-right: 100px;
+  /* position: ; */
 }
 .navbar-item {
   text-decoration: none;
+  cursor: pointer;
   text-emphasis-color: white;
 }
+/* .navbar-item li:hover {
+  color: aqua;
+} */
 .social-links {
-  position: fixed;
-  right: 100px;
-  margin-top: 75px;
+  /* position: fixed; */
+  margin-right: 100px;
+  /* margin-top: 75px; */
   width: 125px;
   display: flex;
   justify-content: space-between;
@@ -99,7 +119,7 @@ h1 {
 .bio {
   width: 100%;
   height: 97vh;
-  font-size: 20px;
+  font-size: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -116,7 +136,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 20px;
+  font-size: 16px;
   padding-top: 15px;
 }
 .project {
@@ -126,7 +146,7 @@ h1 {
   width: 50%;
   padding: 10px;
   margin: 10px;
-  border: 2px solid #07575B;
+  border: 2px solid rgb(137,56,49);;
 }
 .project-img {
   margin: 15px;
@@ -154,10 +174,26 @@ h1 {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgb(236, 236, 236);
+  background-color: rgb(25, 27, 38);
   margin-top: 5px;
   width: 100%;
   height: 30vh;
+}
+@media screen and (max-width: 1500px) {
+  .navbar {
+    position: absolute;
+  }
+  .bio-desc {
+    margin-top: 10vh;
+    width: 80%;
+  }
+  .project-desc {
+    margin: 15px;
+    width: 100%;
+  }
+  .project {
+    width: 80%;
+  }
 }
 @media screen and (max-width: 975px) {
   .project-img {
@@ -174,12 +210,13 @@ h1 {
     /* margin-right: 25px; */
   }
   .social-links {
-    position: absolute;
+    /* position: absolute; */
     right: 0px;
   }
   .bio {
     width: 100%;
     height: 110vh;
+    font-size: small;
   }
   .bio-desc {
     margin-top: 0vh;
@@ -187,13 +224,15 @@ h1 {
   }
   .project {
     width: 90%;
+    font-size: small;
   }
   .project-desc {
     margin: 15px;
     width: 85%;
+
   }
   .footer {
-   font-size: small;
+   font-size: 12px;
    text-align: center;
   }
 }
