--- a/styles/globals.css
+++ b/styles/globals.css
@@ -204,14 +204,15 @@ h1 {
   }
   .navbar {
     position: absolute;
-    right: 10px;
+    right: 0px;
+    /* background-color: chartreuse; */
   }
   .navbar-list {
-    /* margin-right: 25px; */
+    margin-right: 5px;
   }
   .social-links {
     /* position: absolute; */
-    right: 0px;
+    margin-right: 5px;
   }
   .bio {
     width: 100%;
