--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,9 +108,9 @@ h1 {
   cursor: pointer;
   text-emphasis-color: white;
 }
-/* .navbar-item li:hover {
-  color: aqua;
-} */
+.navbar-item:hover {
+  color: rgb(232, 152, 152);
+}
 .social-links {
   /* position: fixed; */
   margin-right: 100px;
@@ -153,7 +153,7 @@ h1 {
   width: 50%;
   padding: 10px;
   margin: 10px;
-  border: 2px solid rgb(137,56,49);;
+  border: 2px solid rgb(137,56,49);
 }
 .project-img {
   margin: 15px;
@@ -185,10 +185,13 @@ h1 {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgb(25, 27, 38);
+  /* background-color: rgb(25, 27, 38); */
   margin-top: 5px;
   width: 100%;
   height: 30vh;
+}
+.footer a:hover {
+  color: rgb(232, 152, 152);
 }
 @media screen and (max-width: 1500px) {
   .navbar {
