--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,13 +54,20 @@ h1 {
   font-size: 24px;
 }
 .scroll-button {
-  background-color:rgb(137,56,49);;
+  background-color:rgb(137,56,49);
   color: white;
   border-radius: 30px;
   margin: 40px;
   padding: 10px;
   border: none;
   outline: none;
+  font-weight: 600;
+  transition: 0.3s;
+}
+.scroll-button:hover {
+  background-color: rgb(232, 152, 152);
+  color: rgb(137,56,49);
+  font-weight: 600;
 }
 .body {
   font-size: 16px;
@@ -107,9 +114,19 @@ h1 {
   text-decoration: none;
   cursor: pointer;
   text-emphasis-color: white;
+  transition: 0.3s;
 }
 .navbar-item:hover {
   color: rgb(232, 152, 152);
+}
+#socialIcon {
+  fill: rgb(219, 214, 214);
+  transition: 0.5s;
+}
+#socialIcon:hover {
+  fill: rgb(232, 152, 152);
+  /* position: absolute; */
+  /* padding-bottom: 3px; */
 }
 .social-links {
   /* position: fixed; */
@@ -189,6 +206,9 @@ h1 {
   margin-top: 5px;
   width: 100%;
   height: 30vh;
+}
+.footer a {
+  transition: 0.3s;
 }
 .footer a:hover {
   color: rgb(232, 152, 152);
