--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,20 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+.falling-back {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /* background-color: chocolate; */
+  justify-content: center;
+  z-index: -1;
+  margin-top: -250px;
+}
+#falling {
+  width: 20%;
+  /* stroke: rgb(90, 0, 0); */
+}
 .loading svg {
   /* width: 40px;
   height: 40px; */
