--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,20 +51,16 @@ h1 {
   margin-top: -250px;
 }
 #falling {
-  width: 20%;
-  stroke: rgb(54, 42, 42);
+  width: 30%;
+  stroke: rgb(53, 43, 43);
 }
 #fallingTwo {
-  width: 10%;
-  stroke: rgb(95, 45, 45);
+  width: 20%;
+  stroke: rgb(112, 53, 53);
 }
 #fallingThree {
-  width: 10%;
-  stroke: rgb(102, 74, 74);
-}
-.loading svg {
-  /* width: 40px;
-  height: 40px; */
+  width: 20%;
+  stroke: rgb(128, 93, 93);
 }
 .home {
   width: 100%;
@@ -135,7 +131,8 @@ h1 {
 .navbar-item {
   text-decoration: none;
   cursor: pointer;
-  text-emphasis-color: white;
+  /* text-emphasis-color: white; */
+  color: rgb(137,56,49);
   transition: 0.3s;
 }
 .navbar-item:hover {
@@ -225,15 +222,18 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
   /* background-color: rgb(25, 27, 38); */
-  margin-top: 5px;
+  /* margin-top: 5px; */
   width: 100%;
   height: 30vh;
 }
 .footer a {
   transition: 0.3s;
+  color: rgb(137,56,49);
+  text-decoration: none;
 }
 .footer a:hover {
   color: rgb(232, 152, 152);
+  margin-bottom: 10px;
 }
 @media screen and (max-width: 1500px) {
   .navbar {
