--- a/styles/globals.css
+++ b/styles/globals.css
@@ -221,8 +221,6 @@ h1 {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  /* background-color: rgb(25, 27, 38); */
-  /* margin-top: 5px; */
   width: 100%;
   height: 30vh;
 }
@@ -252,6 +250,9 @@ h1 {
   }
 }
 @media screen and (max-width: 975px) {
+  .loading svg {
+    width: 40%;
+  }
   .project-img {
     display: none;
   }
@@ -261,7 +262,6 @@ h1 {
   .navbar {
     position: absolute;
     right: 0px;
-    /* background-color: chartreuse; */
   }
   .navbar-list {
     margin-right: 5px;
@@ -286,7 +286,6 @@ h1 {
   .project-desc {
     margin: 15px;
     width: 85%;
-
   }
   .footer {
    font-size: 12px;
