--- a/styles/globals.css
+++ b/styles/globals.css
@@ -259,16 +259,57 @@ h1 {
   .eye {
   display: none;
   }
-  .navbar {
-    position: absolute;
+  .mobileNav {
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    z-index: 1;
     right: 0px;
+    top: 0px;
+    height: 100%;
+    width: 40%;
+    /* background-color: burlywood; */
   }
-  .navbar-list {
+  .menuIcon {
+    width: 30px;
+    height: 30px;
+  }
+  /* .menuIcon:hover {
+
+  } */
+  .closeIcon {
+    width: 30px;
+    height: 30px;
+  }
+  .mobileMenu-icon{
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+  .mobileMenu {
+    width: 100%;
+    background-color: rgb(51, 16, 12);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+  }
+  .navbar {
+    display: none;
+  }
+  .navbar-item {
+    margin-top: 30px;
+    margin-right: 10px;
+  }
+  /* .navbar-list {
     margin-right: 5px;
-  }
+  } */
   .social-links {
     /* position: absolute; */
-    margin-right: 5px;
+    margin-right: 0px;
+    margin-top: 30px;
+    /* background-color: cadetblue; */
+    justify-content: space-evenly;
+    width: 90%;
   }
   .bio {
     width: 100%;
