Debug hidden close button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -259,7 +259,7 @@ h1 {
   .eye {
   display: none;
   }
-  .mobileNav {
+  /* .mobileNav {
     position: fixed;
     display: flex;
     justify-content: flex-end;
@@ -268,8 +268,8 @@ h1 {
     top: 0px;
     height: 100%;
     width: 40%;
-    /* background-color: burlywood; */
-  }
+    background-color: burlywood;
+  } */
   .menuIcon {
     width: 30px;
     height: 30px;
@@ -287,9 +287,17 @@ h1 {
   .mobileMenu-icon{
     margin-top: 10px;
     margin-right: 10px;
+    position: fixed;
+    right: 0px;
+    top: 0px;
   }
   .mobileMenu {
-    width: 100%;
+    position: fixed;
+    z-index: 2;
+    right: 0px;
+    top: 0px;
+    height: 100%;
+    width: 50%;
     background-color: rgb(51, 16, 12);
     display: flex;
     flex-direction: column;
@@ -300,7 +308,7 @@ h1 {
     display: none;
   }
   .navbar-item {
-    margin-top: 30px;
+    margin-top: 60px;
     margin-right: 10px;
   }
   /* .navbar-list {
@@ -309,7 +317,7 @@ h1 {
   .social-links {
     /* position: absolute; */
     margin-right: 0px;
-    margin-top: 30px;
+    margin-top: 60px;
     /* background-color: cadetblue; */
     justify-content: space-evenly;
     width: 90%;
