--- a/styles/globals.css
+++ b/styles/globals.css
@@ -259,17 +259,17 @@ h1 {
   .eye {
   display: none;
   }
-  /* .mobileNav {
+  .mobileNav {
     position: fixed;
     display: flex;
     justify-content: flex-end;
     z-index: 1;
     right: 0px;
     top: 0px;
-    height: 100%;
-    width: 40%;
-    background-color: burlywood;
-  } */
+    height: 60px;
+    width: 100%;
+    /* background-color: burlywood; */
+  }
   .menuIcon {
     width: 30px;
     height: 30px;
@@ -283,6 +283,12 @@ h1 {
   .closeIcon {
     width: 30px;
     height: 30px;
+  }
+  .mobileNavbar {
+    width: 100%;
+    /* height: 10%; */
+    background-color: rgb(25, 27, 38);
+
   }
   .mobileMenu-icon{
     margin-top: 10px;
