--- a/styles/globals.css
+++ b/styles/globals.css
@@ -260,14 +260,14 @@ h1 {
   display: none;
   }
   .mobileNav {
-    position: fixed;
+    /* position: fixed;
     display: flex;
     justify-content: flex-end;
     z-index: 1;
     right: 0px;
     top: 0px;
     height: 60px;
-    width: 100%;
+    width: 100%; */
     /* background-color: burlywood; */
   }
   .menuIcon {
@@ -285,6 +285,13 @@ h1 {
     height: 30px;
   }
   .mobileNavbar {
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    z-index: 1;
+    right: 0px;
+    top: 0px;
+    height: 60px;
     width: 100%;
     /* height: 10%; */
     background-color: rgb(25, 27, 38);
@@ -297,24 +304,35 @@ h1 {
     right: 0px;
     top: 0px;
   }
+  .menuContainer {
+    position: fixed;
+    display: flex;
+    z-index: 1;
+    right: 0px;
+    top: 0px;
+    background-color: rgb(25, 27, 38);
+    opacity: 0.9;
+    width: 100%;
+    height: 100%;
+  }
   .mobileMenu {
     position: fixed;
     z-index: 2;
     right: 0px;
     top: 0px;
     height: 100%;
-    width: 50%;
+    width: 60%;
     background-color: rgb(51, 16, 12);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-
+    opacity: 1;
   }
   .navbar {
     display: none;
   }
   .navbar-item {
-    margin-top: 60px;
+    margin-top: 70px;
     margin-right: 10px;
   }
   /* .navbar-list {
@@ -323,7 +341,7 @@ h1 {
   .social-links {
     /* position: absolute; */
     margin-right: 0px;
-    margin-top: 60px;
+    margin-top: 70px;
     /* background-color: cadetblue; */
     justify-content: space-evenly;
     width: 90%;
