--- a/styles/globals.css
+++ b/styles/globals.css
@@ -311,7 +311,7 @@ h1 {
     right: 0px;
     top: 0px;
     background-color: rgb(25, 27, 38);
-    opacity: 0.9;
+    opacity: 0.8;
     width: 100%;
     height: 100%;
   }
@@ -327,6 +327,7 @@ h1 {
     flex-direction: column;
     align-items: flex-end;
     opacity: 1;
+    font-size: 24px;
   }
   .navbar {
     display: none;
