Implement nutrific carousel using react bootstrap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -191,6 +191,11 @@ h1 {
   margin: 10px;
   border: 2px solid rgb(137,56,49);
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .project-img {
   margin: 15px;
 }
