--- a/styles/globals.css
+++ b/styles/globals.css
@@ -256,7 +256,7 @@ h1 {
 }
 @media screen and (max-width: 975px) {
   .loading svg {
-    width: 40%;
+    width: 60%;
   }
   .project-img {
     display: none;
@@ -276,8 +276,8 @@ h1 {
     /* background-color: burlywood; */
   }
   .menuIcon {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
   /* .menuIcon:hover {
 
@@ -286,8 +286,8 @@ h1 {
     stroke: rgb(137,56,49);
   }
   .closeIcon {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
   .mobileNavbar {
     position: fixed;
@@ -331,6 +331,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: space-evenly;
     opacity: 1;
     font-size: 24px;
   }
@@ -338,7 +339,7 @@ h1 {
     display: none;
   }
   .navbar-item {
-    margin-top: 90px;
+    /* margin-top: 90px; */
     margin-right: 10px;
   }
   /* .navbar-list {
@@ -347,10 +348,14 @@ h1 {
   .social-links {
     /* position: absolute; */
     margin-right: 0px;
-    margin-top: 90px;
+    /* margin-top: 90px; */
     /* background-color: cadetblue; */
     justify-content: space-evenly;
     width: 90%;
+  }
+  .link-icon svg{
+    width: 40px;
+    height: 40px;
   }
   .bio {
     width: 100%;
