--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 html {
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(137,56,49);
+  color: rgb(137, 56, 49);
   background-color: rgb(25, 27, 38);
 }
 img {
@@ -18,7 +18,7 @@ h1 {
   text-align: center;
 }
 *:visited {
-  color: rgb(137,56,49);
+  color: rgb(137, 56, 49);
 }
 .body {
   animation: fadeInAnimation ease 2.5s;
@@ -27,11 +27,11 @@ h1 {
 }
 @keyframes fadeInAnimation {
   0% {
-      opacity: 0;
+    opacity: 0;
   }
   100% {
-      opacity: 1;
-   }
+    opacity: 1;
+  }
 }
 .loading {
   display: flex;
@@ -72,7 +72,7 @@ h1 {
   font-size: 24px;
 }
 .scroll-button {
-  background-color:rgb(137,56,49);
+  background-color: rgb(137, 56, 49);
   color: white;
   border-radius: 30px;
   margin: 40px;
@@ -84,7 +84,7 @@ h1 {
 }
 .scroll-button:hover {
   background-color: rgb(232, 152, 152);
-  color: rgb(137,56,49);
+  color: rgb(137, 56, 49);
   font-weight: 600;
 }
 .body {
@@ -108,7 +108,7 @@ h1 {
   /* margin-top: 25px; */
   width: 100%;
   background-color: rgb(25, 27, 38);
-  transition: transform 100ms linear,
+  transition: transform 100ms linear;
 }
 #slideIn {
   transform: translateY(0);
@@ -132,7 +132,7 @@ h1 {
   text-decoration: none;
   cursor: pointer;
   /* text-emphasis-color: white; */
-  color: rgb(137,56,49);
+  color: rgb(137, 56, 49);
   transition: 0.3s;
 }
 .navbar-item:hover {
@@ -155,7 +155,7 @@ h1 {
   display: flex;
   justify-content: space-between;
 }
-.link-icon svg{
+.link-icon svg {
   width: 30px;
   height: 30px;
 }
@@ -189,7 +189,7 @@ h1 {
   width: 50%;
   padding: 10px;
   margin: 10px;
-  border: 2px solid rgb(137,56,49);
+  border: 2px solid rgb(137, 56, 49);
 }
 .center {
   display: block;
@@ -216,7 +216,7 @@ h1 {
   position: absolute;
   right: 10px;
 }
-.project-links svg{
+.project-links svg {
   width: 25px;
   height: 30px;
   cursor: pointer;
@@ -231,7 +231,7 @@ h1 {
 }
 .footer a {
   transition: 0.3s;
-  color: rgb(137,56,49);
+  color: rgb(137, 56, 49);
   text-decoration: none;
 }
 .footer a:hover {
@@ -262,7 +262,7 @@ h1 {
     display: none;
   }
   .eye {
-  display: none;
+    display: none;
   }
   .mobileNav {
     /* position: fixed;
@@ -283,7 +283,7 @@ h1 {
 
   } */
   .mobileIconLine {
-    stroke: rgb(137,56,49);
+    stroke: rgb(137, 56, 49);
   }
   .closeIcon {
     width: 40px;
@@ -300,9 +300,8 @@ h1 {
     width: 100%;
     /* height: 10%; */
     background-color: rgb(25, 27, 38);
-
   }
-  .mobileMenu-icon{
+  .mobileMenu-icon {
     margin-top: 10px;
     margin-right: 10px;
     position: fixed;
@@ -353,7 +352,7 @@ h1 {
     justify-content: space-evenly;
     width: 90%;
   }
-  .link-icon svg{
+  .link-icon svg {
     width: 40px;
     height: 40px;
   }
@@ -375,8 +374,8 @@ h1 {
     width: 85%;
   }
   .footer {
-   font-size: 12px;
-   text-align: center;
+    font-size: 12px;
+    text-align: center;
   }
   #falling {
     width: 40%;
