--- a/styles/globals.css
+++ b/styles/globals.css
@@ -182,6 +182,10 @@ h1 {
   font-size: 16px;
   padding-top: 15px;
 }
+.brisktalk a {
+  text-decoration: none;
+  color: brown;
+}
 .project {
   display: flex;
   justify-content: center;
@@ -264,20 +268,9 @@ h1 {
   .eye {
     display: none;
   }
-  .mobileNav {
-    /* position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    z-index: 1;
-    right: 0px;
-    top: 0px;
-    height: 60px;
-    width: 100%; */
-    /* background-color: burlywood; */
-  }
   .menuIcon {
-    width: 40px;
-    height: 40px;
+    width: 1.5rem;
+    height: 1.5rem;
   }
   /* .menuIcon:hover {
 
@@ -286,8 +279,8 @@ h1 {
     stroke: rgb(137, 56, 49);
   }
   .closeIcon {
-    width: 40px;
-    height: 40px;
+    width: 1.5rem;
+    height: 1.5rem;
   }
   .mobileNavbar {
     position: fixed;
