--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,19 +93,21 @@ h1 {
   flex-direction: column;
   align-items: center;
 }
+.menuIcon {
+  display: none;
+}
+.closeIcon {
+  display: none;
+}
 .navbar {
   z-index: 2;
   display: flex;
   justify-content: space-around;
-  /* align-items: flex-end;
-  align-content: center; */
   flex-direction: column;
   align-items: flex-end;
   position: fixed;
   top: 0;
   height: 100px;
-  /* right: 100px; */
-  /* margin-top: 25px; */
   width: 100%;
   background-color: rgb(25, 27, 38);
   transition: transform 100ms linear;
@@ -119,19 +121,14 @@ h1 {
 .navbar-list {
   display: flex;
   justify-content: space-between;
-  /* width: 100%; */
   list-style-type: none;
-  /* padding-left: 0; */
   width: 250px;
-  /* right: 400px; */
   margin: 0;
   margin-right: 100px;
-  /* position: ; */
 }
 .navbar-item {
   text-decoration: none;
   cursor: pointer;
-  /* text-emphasis-color: white; */
   color: rgb(137, 56, 49);
   transition: 0.3s;
 }
@@ -144,13 +141,9 @@ h1 {
 }
 #socialIcon:hover {
   fill: rgb(232, 152, 152);
-  /* position: absolute; */
-  /* padding-bottom: 3px; */
 }
 .social-links {
-  /* position: fixed; */
   margin-right: 100px;
-  /* margin-top: 75px; */
   width: 125px;
   display: flex;
   justify-content: space-between;
@@ -252,9 +245,9 @@ h1 {
   color: rgb(232, 152, 152);
   margin-bottom: 10px;
 }
-@media screen and (max-width: 1500px) {
+/* @media screen and (max-width: 1500px) {
   .navbar {
-    /* position: absolute; */
+    position: absolute;
   }
   .bio-desc {
     margin-top: 10vh;
@@ -267,7 +260,7 @@ h1 {
   .project {
     width: 80%;
   }
-}
+} */
 @media screen and (max-width: 975px) {
   .loading svg {
     width: 60%;
@@ -279,16 +272,15 @@ h1 {
     display: none;
   }
   .menuIcon {
+    display: block;
     width: 1.5rem;
     height: 1.5rem;
   }
-  /* .menuIcon:hover {
-
-  } */
   .mobileIconLine {
     stroke: rgb(137, 56, 49);
   }
   .closeIcon {
+    display: block;
     width: 1.5rem;
     height: 1.5rem;
   }
@@ -301,7 +293,6 @@ h1 {
     top: 0px;
     height: 60px;
     width: 100%;
-    /* height: 10%; */
     background-color: rgb(25, 27, 38);
   }
   .mobileMenu-icon {
@@ -332,32 +323,35 @@ h1 {
     background-color: rgb(51, 16, 12);
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-evenly;
     opacity: 1;
-    font-size: 24px;
+    font-size: 3rem;
+    animation: navOpen 500ms forwards;
+  }
+  @keyframes navOpen {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .navbar {
     display: none;
   }
   .navbar-item {
-    /* margin-top: 90px; */
     margin-right: 10px;
   }
-  /* .navbar-list {
-    margin-right: 5px;
-  } */
+
   .social-links {
-    /* position: absolute; */
     margin-right: 0px;
-    /* margin-top: 90px; */
-    /* background-color: cadetblue; */
     justify-content: space-evenly;
     width: 90%;
   }
   .link-icon svg {
-    width: 40px;
-    height: 40px;
+    width: 3rem;
+    height: 3rem;
   }
   .bio {
     width: 100%;
